# zscaler-python-sdk

./: .gitignore  README.md  README.rst  main.py  pyproject.toml
config/: config.ini.sample
examples/: example_admin.py  example_fw_rules.py  example_urlcategory.py  example_urlfiltering.py  example_users.py  main.py
tests/: test_zscaler_python_sdk.py
zscaler_python_sdk/: __init__.py  admin.py  auth.py  base.py  firewall_rules.py  main.py  url_categories.py  url_filtering_rules.py  users.py  utils.py  zia.py  zpa.py
zscaler_python_sdk/lib/: README.md  __init__.py  admin.py  api.py  auth.py  base.py  firewall_rules.py  ip_group.py  nw_app.py  nw_service.py  url_categories.py  url_filtering_rules.py  users.py
zscaler_python_sdk/lib/zpa/: auth.py
