[tool.poetry]
name = "zscaler-python-sdk"
version = "0.2.1"
description = "Unofficial Zscaler API python sdk"
homepage = "https://github.com/yuta519/zscaler-python-sdk"
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
